--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 		<link rel="stylesheet" href="css/main.css" />
 		<script src="https://kit.fontawesome.com/66901808bd.js"></script>
 	</head>
-	<body>
+	<body bg-color-factor=>
 		<header>
+			<span class="bg-color-factor"></span>
 			<div class="menu-btn">
 				<div class="btn-line"></div>
 				<div class="btn-line"></div>
@@ -56,12 +57,23 @@
 					<i class="fab fa-github fa-2x" title="Github"></i>
 				</a>
 			</div>
+			<div class="download-resume">
+				<form
+					method="get"
+					action="other/Kyle-ODore-RESUME-2019.pdf"
+					target="_blank"
+				>
+					<button class="btn-light btn-download" type="submit">
+						<i class="fas fa-file-pdf"></i> View my resume
+					</button>
+				</form>
+			</div>
 		</main>
 
 		<footer id="main-footer">
 			Copyright &copy; 2019
 		</footer>
 
-		<script src="./js/main.js"></script>
+		<script src="js/main.js"></script>
 	</body>
 </html>
