--- a/work.html
+++ b/work.html
@@ -55,103 +55,125 @@
 			<div class="projects">
 				<div class="item">
 					<a href="./work-pages/website-proj.html" class="picture">
-						<img
-							src="img/projects/personal-website-project.jpg"
-							alt="Image of this website's homepage."
-						/>
+						<div class="image">
+							<img
+								src="img/projects/personal-website-project.jpg"
+								alt="Image of this website's homepage."
+							/>
+						</div>
 					</a>
 					<div class="links">
-					<a href="https://kyleodore.dev" target="_blank" class="btn-light">
-						<i class="fas fa-eye"></i> This Website!
-					</a>
-					<a
-						href="https://github.com/KyleODore/portfolio-responsive"
-						class="btn-dark"
-					>
-						<i class="fab fa-github"></i> Github
-					</a>
-				</div>
+						<a href="https://kyleodore.dev" target="_blank" class="btn-light">
+							<i class="fas fa-eye"></i> This Website!
+						</a>
+						<a
+							href="https://github.com/KyleODore/portfolio-responsive"
+							class="btn-dark"
+						>
+							<i class="fab fa-github"></i> Github
+						</a>
+					</div>
 				</div>
 				<div class="item">
 					<a href="./work-pages/java-fiddling-proj.html">
-						<!-- <img src="img/projects/project2.jpg" alt="Java Fiddling" /> -->
-						<i class="fab fa-java photo-logo"></i>
+						<div class="image">
+							<!-- <img src="img/projects/project2.jpg" alt="Java Fiddling" /> -->
+							<i class="fab fa-java photo-logo"></i>
+						</div>
 					</a>
-					<a
-						href="./work-pages/java-fiddling-proj.html"
-						target="_blank"
-						class="btn-light"
-					>
-						<i class="fas fa-eye"></i> Java Fiddling
-					</a>
-					<a
-						href="https://github.com/KyleODore/JavaFiddling"
-						target="_blank"
-						class="btn-dark"
-					>
-						<i class="fab fa-github"></i> Github
-					</a>
+					<div class="links">
+						<a
+							href="./work-pages/java-fiddling-proj.html"
+							target="_blank"
+							class="btn-light"
+						>
+							<i class="fas fa-eye"></i> Java Fiddling
+						</a>
+						<a
+							href="https://github.com/KyleODore/JavaFiddling"
+							target="_blank"
+							class="btn-dark"
+						>
+							<i class="fab fa-github"></i> Github
+						</a>
+					</div>
 				</div>
 				<div class="item">
 					<a href="./work-pages/timension.html">
-						<img
-							class="logo-photo"
-							src="img/projects/mgm-logo.png"
-							alt="Timension Logo"
-						/>
+						<div class="image">
+							<img
+								class="logo-photo"
+								src="img/projects/mgm-logo.png"
+								alt="Timension Logo"
+							/>
+						</div>
 					</a>
-					<a
-						href="./work-pages/timension.html"
-						target="_blank"
-						class="btn-light"
-					>
-						<i class="fas fa-eye"></i> Timension (mgm-tp Danang)
-					</a>
+					<div class="links">
+						<a
+							href="./work-pages/timension.html"
+							target="_blank"
+							class="btn-light"
+						>
+							<i class="fas fa-eye"></i> Timension (mgm-tp Danang)
+						</a>
+					</div>
 				</div>
 				<div class="item">
 					<a href="./work-pages/fpt-proj.html">
-						<img
-							src="img/projects/fsoft-logo.jpg"
-							alt="Compliance and Analytics App, FPT logo"
-						/>
+						<div class="image">
+							<img
+								src="img/projects/FPT_Software_Logo.png"
+								alt="Compliance and Analytics App, FPT logo"
+							/>
+						</div>
 					</a>
-					<a
-						href="./work-pages/fpt-proj.html"
-						target="_blank"
-						class="btn-light"
-					>
-						<i class="fas fa-eye"></i> Compliance and Analytics App
-					</a>
+					<div class="links">
+						<a
+							href="./work-pages/fpt-proj.html"
+							target="_blank"
+							class="btn-light"
+						>
+							<i class="fas fa-eye"></i> Compliance and Analytics App
+						</a>
+					</div>
 				</div>
 				<div class="item">
 					<a href="./work-pages/4u-proj.html">
-						<img class="logo-photo" src="img/projects/4U.png" alt="4U app logo" />
+						<div class="image">
+							<img class="logo-photo" src="img/projects/4U.png" alt="4U app logo" />
+						</div>
 					</a>
-					<a href="./work-pages/4u-proj.html" target="_blank" class="btn-light">
-						<i class="fas fa-eye"></i> 4U
-					</a>
-					<a
-						href="https://github.com/KyleODore/4U-Android"
-						target="_blank"
-						class="btn-dark"
-					>
-						<i class="fab fa-github"></i> Github
-					</a>
+					<div class="links">
+						<a href="./work-pages/4u-proj.html" target="_blank" class="btn-light">
+							<i class="fas fa-eye"></i> 4U
+						</a>
+						<a
+							href="https://github.com/KyleODore/4U-Android"
+							target="_blank"
+							class="btn-dark"
+						>
+							<i class="fab fa-github"></i> Github
+						</a>
+					</div>
 				</div>
 				<div class="item">
 					<a href="./work-pages/durn-bus-away.html">
-						<i class="fas fa-bus photo-logo"></i>
+						<div class="image">
+							<i class="fas fa-bus photo-logo"></i>
+						</div>
 					</a>
-					<a href="./work-pages/durn-bus-away.html" target="_blank" class="btn-light">
-						<i class="fas fa-eye"></i> Durn Bus Away
-					</a>
-					<a
-						href="https://github.com/KyleODore/OneBusAwayStop-Electron"
-						target="_blank"
-						class="btn-dark"
-					>
-						<i class="fab fa-github"></i> Github
-					</a>
+					<div class="links">
+						<a href="./work-pages/durn-bus-away.html" target="_blank" class="btn-light">
+							<i class="fas fa-eye"></i> Durn Bus Away
+						</a>
+						<a
+							href="https://github.com/KyleODore/OneBusAwayStop-Electron"
+							target="_blank"
+							class="btn-dark"
+						>
+							<i class="fab fa-github"></i> Github
+						</a>
+					</div>
 				</div>
 			</div>
 		</main>
